<resources>
    <string name="app_name">TP8DESIR</string>
    <string name="choisissez_une_image_charger">Choisissez une image à charger ...</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="error_upload_image">Une erreur s\'est produite, impossible de charger l\'image</string>
    <string name="error_no_image">Aucune image n\'a été chargée</string>
    <string name="inconnu">Inconnu</string>
    <string name="text_view_latitude_text">Latitude</string>
    <string name="text_view_longitude_text">Longitude</string>
    <string name="invalid_latitude_toast">Latitude invalide</string>
    <string name="invalid_longitude_toast">Longitude invalide</string>
    <string name="empty_coordinates_toast">Coordonnées vides</string>
    <string name="invalid_coordinates_toast">Coordonnées invalides</string>
    <string name="no_app_available_toast">Aucune application disponible</string>
    <string name="retour_l_accueil">Retour à l\'accueil</string>
    <string name="rechercher_les_images_a_x_distances_de_moi">Rechercher les images a x distances de moi</string>
    <string name="distance_en_km">Distance en km</string>
    <string name="rechercher">Rechercher</string>
    <string name="retour">Retour</string>


</resources>